[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Player/Default/ghost2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/Default/ghost1.png" type="Texture" id=2]
[ext_resource path="res://Nodes/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Assets/Player/Dash/dash1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/Dash/dash2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/Dash/dash4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/Dash/dash3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/Dash/dash5.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "dash",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.5, 7.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.5, 6.5 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true
offset = Vector2( -2, -4 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, -2.5 )
shape = SubResource( 2 )

[node name="HitboxAir" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, -3.5 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.06
drag_margin_top = 0.13
drag_margin_right = 0.05
drag_margin_bottom = 0.08
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="SlashTimer" type="Timer" parent="."]
wait_time = 0.6
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="SlashTimer" to="." method="_on_SlashTimer_timeout"]
